--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -64,7 +64,7 @@
     <div>
       <div>
         <div style="text-align: center">
-          <img src="https://addons.thunderbird.net/static//img/zamboni/anon_user.png" style="border-radius: 100%; max-width: 156px; margin: 10px">
+          <img src="assets/img/dummy/user.png" style="border-radius: 100%; max-width: 156px; margin: 10px">
         </div>
         <div class="row" style="float: right">
           <div style="margin: 10px; float: right">
