--- a/src/app/components/advertisement/view.advertisement.component.html
+++ b/src/app/components/advertisement/view.advertisement.component.html
@@ -17,7 +17,7 @@
                   <i class="icon icon-search" aria-hidden="true"></i>
                 </span>
             </div>
-            <input class="form-control my-0 py-1" type="text" [formControl]="searchKey"  (keyup)="search($event)" placeholder="Search Name" aria-label="Search">
+            <input class="form-control my-0 py-1" type="text" [formControl]="searchKey"  (keyup)="search(searchKey)" placeholder="Search Name" aria-label="Search">
           </div>
           <div style="clear: both"></div>
           <div class="card r-0 shadow">
