--- a/src/app/components/header.component.html
+++ b/src/app/components/header.component.html
@@ -1,10 +1,10 @@
 <aside class="main-sidebar fixed offcanvas shadow">
   <section class="sidebar">
-    <div class="w-80px mt-3 mb-3 ml-3">
-      <!--<img src="assets/img/basic/logo.png" alt="" />-->
+    <!--<div class="w-80px mt-3 mb-3 ml-3">
+      &lt;!&ndash;<img src="assets/img/basic/logo.png" alt="" />&ndash;&gt;
       <h2>PUSHADS<br/><div style="font-size: 15px">MERCHANT</div></h2>
-    </div>
-    <cs-user name="Admin" image_photo="https://addons.thunderbird.net/static//img/zamboni/anon_user.png"></cs-user>
+    </div>-->
+    <cs-user name="Admin" image_photo="assets/img/dummy/user.png"></cs-user>
     <ul class="sidebar-menu">
       <ng-container *ngFor="let menu of menus">
         <li class="treeview" *ngIf="menu.items" style="cursor: pointer;">
