--- a/src/app/components/login.component.html
+++ b/src/app/components/login.component.html
@@ -16,7 +16,7 @@
               <input type="password" name="password" class="form-control form-control-lg" [(ngModel)]="dataLogin.password" placeholder="Password" required />
             </div>
             <input type="submit" class="btn btn-primary btn-lg btn-block" value="Log In" />
-            <p class="forget-pass">Forgot your password?</p>
+            <!--<p class="forget-pass">Forgot your password?</p>-->
           </form>
         </div>
       </div>
