--- a/src/app/components/navbar.component.html
+++ b/src/app/components/navbar.component.html
@@ -17,7 +17,7 @@
     </li>
     <li class="dropdown custom-dropdown user user-menu">
       <a href="#" class="nav-link" data-toggle="dropdown">
-        <img src="https://addons.thunderbird.net/static//img/zamboni/anon_user.png" class="user-image" alt="User Image" />
+        <img src="assets/img/dummy/user.png" class="user-image" alt="User Image" />
         <i class="icon-more_vert "></i>
       </a>
       <div class="dropdown-menu p-4">
