--- a/src/app/components/user.component.html
+++ b/src/app/components/user.component.html
@@ -1,9 +1,15 @@
 <div class="relative">
-  <a data-toggle="collapse" href="#userSettingsCollapse" role="button" aria-expanded="false"
-     aria-controls="userSettingsCollapse"
-     class="btn-fab btn-fab-sm fab-right fab-top btn-primary shadow1 ">
-    <i class="icon icon-cogs"></i>
-  </a>
+  <div style="font-size: 25px;margin: 5px; display: inline-flex">
+    <h2>
+      <div>PUSHADS</div>
+      <div style="font-size: 15px">merchant</div>
+    </h2>
+    <div>
+      <a href="#" data-toggle="offcanvas" class="paper-nav pp-nav-times icon icon-times icon-lg" style=" color: #bbc2c8; margin-left: 122px">
+        <i></i>
+      </a>
+    </div>
+  </div>
   <div class="user-panel p-3 light mb-2">
     <div>
       <div class="float-left image">
@@ -12,6 +18,11 @@
       <div class="float-left info">
         <h6 class="font-weight-light mt-2 mb-1">{{datas.firstname}}</h6>
         <a href="#"><i class="icon-circle text-success blink"></i> Online</a>
+        <a data-toggle="collapse" href="#userSettingsCollapse" role="button" aria-expanded="false"
+           aria-controls="userSettingsCollapse"
+           class="btn-fab btn-fab-sm fab-right fab-top btn-primary shadow1" style="top: 100px;">
+          <i class="icon icon-cogs"></i>
+        </a>
       </div>
     </div>
     <div class="clearfix"></div>
