--- a/src/app/components/advertisement/view.advertisement.component.html
+++ b/src/app/components/advertisement/view.advertisement.component.html
@@ -40,7 +40,7 @@
                     <td>
                       <div>
                         <div><b style="font-size: 15px;">{{data.name}}</b></div>
-                        <div><small class="text-black-50">Group </small></div>
+                        <div><small class="text-black-50">Merchant </small></div>
                         <div><b style="font-size: 15px;">{{data.group.name}}</b></div>
                         <div><small class="text-black-50">Code </small></div>
                         <div><b style="font-size: 15px;">{{data.code}}</b></div>
@@ -134,7 +134,7 @@
           </div>
           <div style="margin-bottom: 15px">
             <div style="color: #808080a8">
-              Group :
+              Merchant :
             </div>
             <div style="font-size: 19px">
               <b>{{this.group}}</b>
@@ -315,147 +315,6 @@
             </div>
           </div>
         </div>
-
-          <!--<div style="background-color: #97989730; padding: 5px; border-radius: 5px; margin-bottom: 5px;">
-              <table class="table" style=" color: #86939e">
-                <tr>
-                  <td><b>Name</b></td>
-                  <td class="custom-width-5">:</td>
-                  <td>{{list.name}}</td>
-                </tr>
-                <tr>
-                  <td><b>Group</b></td>
-                  <td class="custom-width-5">:</td>
-                  <td>{{this.group}}</td>
-                </tr>
-                <tr>
-                  <td><b>Code</b></td>
-                  <td class="custom-width-5">:</td>
-                  <td>{{list.code}}</td>
-                </tr>
-                <tr>
-                  <td><b>Start Date</b></td>
-                  <td class="custom-width-5">:</td>
-                  <td>{{list._start}}</td>
-                </tr>
-                <tr>
-                  <td><b>End Date</b></td>
-                  <td class="custom-width-5">:</td>
-                  <td>{{list._end}}</td>
-                </tr>
-                <tr>
-                  <td><b>Impression</b></td>
-                  <td class="custom-width-5">:</td>
-                  <td>{{list._impression}}</td>
-                </tr>
-                <tr>
-                  <td><b>Click</b></td>
-                  <td class="custom-width-5">:</td>
-                  <td>{{list._click}}</td>
-                </tr>
-                <tr>
-                  <td><b>View</b></td>
-                  <td class="custom-width-5">:</td>
-                  <td>{{list._view}}</td>
-                </tr>
-                <tr>
-                  <td><b>Type</b></td>
-                  <td class="custom-width-5">:</td>
-                  <td>{{list.type == "01" ? 'cpm' : list.type == "02" ? 'cpc' : list.type == "03" ? 'cpv' : list.type == "04" ? 'cpa' : list.type == "05" ? 'cpo' : ''}}</td>
-                </tr>
-                <tr>
-                  <td><b>Target</b></td>
-                  <td class="custom-width-5">:</td>
-                  <td>{{list.target}}</td>
-                </tr>
-                <tr>
-                  <td><b>Reach</b></td>
-                  <td class="custom-width-5">:</td>
-                  <td>{{list.reach}}</td>
-                </tr>
-                <tr>
-                  <td><b>Budget</b></td>
-                  <td class="custom-width-5">:</td>
-                  <td>{{list.budget}}</td>
-                </tr>
-                <tr>
-                  <td><b>Price</b></td>
-                  <td class="custom-width-5">:</td>
-                  <td>{{list.price}}</td>
-                </tr>
-                <tr>
-                  <td><b>Description</b></td>
-                  <td class="custom-width-5">:</td>
-                  <td><div [innerHtml]="list.description"></div></td>
-                </tr>
-                <tr>
-                  <td><b>Priority</b></td>
-                  <td class="custom-width-5">:</td>
-                  <td>{{list.priority}}</td>
-                </tr>
-                <tr>
-                  <td><b>OS</b></td>
-                  <td class="custom-width-5">:</td>
-                  <td>{{list.os}}</td>
-                </tr>
-                <tr>
-                  <td><b>Charging Type</b></td>
-                  <td class="custom-width-5">:</td>
-                  <td>{{list.charging_type}}</td>
-                </tr>
-                <tr>
-                  <td><b>Aps</b></td>
-                  <td class="custom-width-5">:</td>
-                  <td><div *ngFor="let data of list.aps">{{data.ap_name}}</div></td>
-                </tr>
-                <tr>
-                  <td><b>Featured</b></td>
-                  <td class="custom-width-5">:</td>
-                  <td>
-                    <div *ngIf="list.isFeatured == true" class="labelsuccess" style="width: 20%;">
-                      <div class="btn btn-success" style="cursor: unset">Yes</div>
-                    </div>
-                    <div *ngIf="list.isFeatured != true" class="labelfailed" style="width: 20%;">
-                      <div class="btn btn-danger" style="cursor: unset">No</div>
-                    </div>
-                  </td>
-                </tr>
-                <tr>
-                  <td><b>National</b></td>
-                  <td class="custom-width-5">:</td>
-                  <td>
-                    <div *ngIf="list.isNational == true" class="labelsuccess" style="width: 20%;">
-                      <div class="btn btn-success" style=" cursor: unset; width: 47px; text-align: center; padding: 6px;">Yes</div>
-                    </div>
-                    <div *ngIf="list.isNational != true" class="labelfailed" style="width: 20%;">
-                      <div class="btn btn-danger" style="cursor: unset">No</div>
-                    </div>
-                  </td>
-                </tr>
-                <tr>
-                  <td><b>Active</b></td>
-                  <td class="custom-width-5">:</td>
-                  <td>
-                    <div *ngIf="list.isActive == true" class="labelsuccess" style="width: 20%;">
-                      <div class="btn btn-success" style=" cursor: unset; width: 47px; text-align: center; padding: 6px;">Yes</div>
-                    </div>
-                    <div *ngIf="list.isActive != true" class="labelfailed" style="width: 20%;">
-                      <div class="btn btn-danger" style="cursor: unset">No</div>
-                    </div>
-                  </td>
-                </tr>
-                <tr>
-                  <td><b>Create</b></td>
-                  <td class="custom-width-5">:</td>
-                  <td>{{list.created_at}}</td>
-                </tr>
-                <tr>
-                  <td><b>Update</b></td>
-                  <td class="custom-width-5">:</td>
-                  <td>{{list.updated_at}}</td>
-                </tr>
-              </table>
-        </div>-->
       </div>
       <div class="modal-footer">
       </div>
