--- a/src/app/components/profile/change-password.component.html
+++ b/src/app/components/profile/change-password.component.html
@@ -59,7 +59,7 @@
         </button>
       </div>
       <div class="card-body">
-        <form action="#" method="post" (submit)="change($event)">
+        <form action="#" method="post" (submit)="change()">
           <div class="form-group">
             <label>*Old Password</label>
             <input type="text" minlength="4" maxlength="100"  name="password_old" class="form-control" [(ngModel)]="changePassword.password_old" required />
