--- a/src/app/components/profile/profile.change.component.html
+++ b/src/app/components/profile/profile.change.component.html
@@ -93,7 +93,7 @@
         </button>
       </div>
       <div class="card-body">
-        <form action="#" method="post" (submit)="change($event)">
+        <form action="#" method="post" (submit)="change()">
           <div class="form-row">
             <div class="form-group col-md-6">
               <label>*Old Password</label>
