--- a/src/app/components/advertisement/statistics.component.html
+++ b/src/app/components/advertisement/statistics.component.html
@@ -9,9 +9,9 @@
             <li class="breadcrumb-item">Statistics</li>
           </ol>
         </nav>
-        <div style="text-align: center; font-size: 38px;margin: 10px; font-family: Impact">
+        <!--<div style="text-align: center; font-size: 38px;margin: 10px; font-family: Impact">
           {{this.advertisementData.name}}
-        </div>
+        </div>-->
         <div class="row" style="/*margin: 10px;*/padding: 25px">
           <div class="col-sm-3" style="/*margin: 10px;*/ padding: 10px;">
             <div style=" border: solid #80808030 1px; border-radius: 10px; padding: 20px;   background-color: white; cursor: pointer" (click)="dataSet.action = ['impression']; renderChart()">
@@ -63,44 +63,43 @@
         <div style="border: solid #80808030 1px; padding: 20px; border-radius: 10px; margin: 20px; background-color: white">
           <div style="font-size: 25px"><b>Content Statistics</b></div>
           <hr/>
-          <div class="row" style="margin: 20px">
-            <div class="form-group" style="margin-right: 10px">
-              <mat-form-field appearance="outline" style="">
-                <mat-label>Time</mat-label>
-                <mat-select id="inputState3" name="time" [(ngModel)]="dataSet.time" (ngModelChange)="render()">
-                  <mat-option value="hourly" [disabled]="range >1 ">Hourly</mat-option>
-                  <mat-option value="daily" [disabled]="range >60">Daily</mat-option>
-                  <mat-option value="week" [disabled]="range >180">Week</mat-option>
-                  <mat-option value="month">Month</mat-option>
-                </mat-select>
-              </mat-form-field>
-            </div>
-            <div class="form-group" style="margin-right: 10px">
-              <mat-form-field appearance="outline" style="">
-                <mat-label>Action</mat-label>
-                <mat-select multiple id="inputState2" name="action" [(ngModel)]="dataSet.action" [ngModelOptions]="{updateOn: 'blur'}" (ngModelChange)="renderChart()">
-                  <mat-option value="impression">Impression</mat-option>
-                  <mat-option value="click">Click</mat-option>
-                  <mat-option value="view">View</mat-option>
-                  <mat-option value="action">Action</mat-option>
-                  <mat-option value="order">Order</mat-option>
-                </mat-select>
-              </mat-form-field>
-            </div>
+          <div class="row mb-3 mt-3" style="margin-left: 4px">
+            <!--filter time-->
+            <mat-form-field appearance="outline" style="max-width: 148px !important; margin-right: 10px">
+              <mat-label>Time</mat-label>
+              <mat-select id="inputState3" name="time" [(ngModel)]="dataSet.time">
+                <mat-option value="hourly" [disabled]="range >1 ">Hourly</mat-option>
+                <mat-option value="daily" [disabled]="range >60">Daily</mat-option>
+                <mat-option value="week" [disabled]="range >180">Week</mat-option>
+                <mat-option value="month">Month</mat-option>
+              </mat-select>
+            </mat-form-field>
 
-            <div class="form-group" style="margin-right: 10px">
-              <mat-form-field appearance="outline" style="">
-                <mat-label>Custom</mat-label>
-                <mat-select id="inputState4" name="range" [(ngModel)]="setDay" (ngModelChange)="configDay()">
-                  <mat-option value="2days">2 Days</mat-option>
-                  <mat-option value="7days">7 Days</mat-option>
-                  <mat-option value="1month">1 Month</mat-option>
-                  <mat-option value="3month">3 Month</mat-option>
-                  <mat-option value="6month">6 Month</mat-option>
-                  <mat-option value="1year">1 year</mat-option>
-                </mat-select>
-              </mat-form-field>
-            </div>
+            <!-- FIlter action -->
+            <mat-form-field appearance="outline" style="max-width: 148px !important; margin-right: 10px">
+              <mat-label>Action</mat-label>
+              <mat-select multiple id="inputState2" name="action" [(ngModel)]="dataSet.action" [ngModelOptions]="{updateOn: 'blur'}">
+                <mat-option value="impression">Impression</mat-option>
+                <mat-option value="click">Click</mat-option>
+                <mat-option value="view">View</mat-option>
+                <mat-option value="action">Action</mat-option>
+                <mat-option value="order">Order</mat-option>
+              </mat-select>
+            </mat-form-field>
+
+
+            <mat-form-field appearance="outline"  style="max-width: 148px !important; margin-right: 10px">
+              <mat-label>Custom</mat-label>
+              <mat-select id="inputState4" name="range" [(ngModel)]="setDay" (ngModelChange)="configDay()">
+                <mat-option value="2days">2 Days</mat-option>
+                <mat-option value="7days">7 Days</mat-option>
+                <mat-option value="1month">1 Month</mat-option>
+                <mat-option value="3month">3 Month</mat-option>
+                <mat-option value="6month">6 Month</mat-option>
+                <mat-option value="1year">1 year</mat-option>
+              </mat-select>
+            </mat-form-field>
+
 
             <!--RANGE-->
             <mat-form-field appearance="outline">
@@ -115,6 +114,14 @@
                       [owlDateTimeTrigger]="dtRange01" [owlDateTime]="dtRange01">
               <owl-date-time [pickerType]="'calendar'" #dtRange01></owl-date-time>
             </mat-form-field>
+
+            <!-- Search -->
+            <div style="margin: 6px 11px">
+              <button *ngIf="statusButton == true" class="btn btn-info" (click)="searchStatistic()" style="height: 46px; color: white"><i class="icon-filter"></i> Apply</button>
+              <div *ngIf="statusButton == false" class="btn btn-info" style="height: 46px">
+                <div class="loaderCustom"></div>
+              </div>
+            </div>
           </div>
           <div *ngIf="lineChartData.length >=1 ">
             <cs-chart [data]="lineChartData" [title]="dataSet.action" [label]="lineChartLabels"></cs-chart>
@@ -132,23 +139,23 @@
           <hr/>
           <div class="card r-0 shadow">
             <div class="table-responsive">
-              <table class="table table-striped table-hover r-0">
+              <table class="table table-striped table-hover r-0  table-centered table-condesed table-fix-head-scroll-body">
                 <thead>
                 <tr class="no-b" style="background-color: #2196f3; color: white">
-                  <th style="font-size: 15px; font-weight: bold">Date</th>
-                  <th style="font-size: 15px; font-weight: bold">Impression</th>
-                  <th style="font-size: 15px; font-weight: bold">Click/CTR</th>
-                  <th style="font-size: 15px; font-weight: bold">View/VTR</th>
-                  <th style="font-size: 15px; font-weight: bold">Action/ATR</th>
+                  <th class="w400px"  style="font-size: 15px; font-weight: bold">Date</th>
+                  <th class="w320px" style="font-size: 15px; font-weight: bold">Impression</th>
+                  <th class="w300px" style="font-size: 15px; font-weight: bold">Click/CTR</th>
+                  <th class="w300px" style="font-size: 15px; font-weight: bold">View/VTR</th>
+                  <th class="w300px" style="font-size: 15px; font-weight: bold">Action/ATR</th>
                 </tr>
                 </thead>
                 <tbody *ngIf="datas.length >=1">
-                <tr *ngFor="let data of datas">
-                  <td>{{convertDate(data)}}</td>
-                  <td>{{convert(data._impression)}}</td>
-                  <td>{{convert(data._click)}}/{{percentClick(data)}}%</td>
-                  <td>{{convert(data._view)}}/{{percentView(data)}}%</td>
-                  <td>{{convert(data._action)}}/{{percentAction(data)}}%</td>
+                <tr *ngFor="let data of datas; let i = index">
+                  <td class="w400px" style="padding:2px;">{{dataConvert[i]}}</td>
+                  <td class="w320px" style="padding:2px;">{{convert(data._impression)}}</td>
+                  <td class="w300px" style="padding:2px;">{{convert(data._click)}}/{{percentClick(data)}}%</td>
+                  <td class="w300px" style="padding:2px;">{{convert(data._view)}}/{{percentView(data)}}%</td>
+                  <td class="w300px" style="padding:2px;">{{convert(data._action)}}/{{percentAction(data)}}%</td>
                 </tr>
                 </tbody>
               </table>
