--- a/src/app/components/advertisement/view.advertisement.component.html
+++ b/src/app/components/advertisement/view.advertisement.component.html
@@ -8,24 +8,33 @@
         <div class="tab-pane fade show active" id="menu1" role="tabpanel" aria-labelledby="v-pills-all-tab">
             <div class="row my-3">
                 <div class="col-md-12">
-                    <div style="text-align: center; font-size: 38px;margin: 10px; font-family: Impact">
-                        ADVERTISEMENT
+                    <!-- search -->
+                    <div class="input-group md-form form-sm form-1 pl-0 col-md-4" style="margin-bottom: 20px">
+                      <div class="input-group-prepend">
+                          <span class="input-group-text lighten-3" style="color: #808080a1;">
+                              <i class="icon icon-search" aria-hidden="true"></i>
+                          </span>
+                      </div>
+                      <input class="form-control my-0 py-1" type="text" [formControl]="searchKey" placeholder="Search" aria-label="Search">
+                      <button (click)="startsearch()" class="btn-primary-custom" mat-flat-button style="margin-left: 10px">Search</button>
                     </div>
-                    <div class="input-group md-form form-sm form-1 pl-0 col-md-4" style="margin: 20px; margin-right: unset; float: right">
-                        <div class="input-group-prepend">
-                            <span class="input-group-text lighten-3" id="basic-text1" style="color: #808080a1;">
-                  <i class="icon icon-search" aria-hidden="true"></i>
-                </span>
-                        </div>
-                        <input class="form-control my-0 py-1" type="text" [formControl]="searchKey" (keyup)="search(searchKey)" placeholder="Search Name" aria-label="Search">
-                    </div>
-                    <div style="clear: both"></div>
                     <div class="card r-0 shadow">
                         <div class="table-responsive">
                             <table class="table table-striped table-hover r-0">
                                 <thead>
+                                <tr>
+                                  <th colspan="20" style="padding: 3px; background-color: #B0D2E5;">
+                                    <div style="font-size: 28px; cursor: pointer; float: right; margin: 10px; display: inline-flex">
+                                      <div>
+                                        <button class="btn btn-success" style="margin-right: 6px; color: white" (click)="doExportExcelAll()">
+                                          <i class="icon icon-print"> Export Excel</i>
+                                        </button>
+                                      </div>
+                                    </div>
+                                  </th>
+                                </tr>
                                     <tr class="no-b" style="background-color: #c4e9ffa1; color: grey">
-                                        <th style="font-size: 15px; font-weight: bold; min-width: 95px; text-align: center">ID</th>
+                                        <th style="font-size: 15px; font-weight: bold; min-width: 95px; text-align: center">NO</th>
                                         <th style="font-size: 15px; font-weight: bold">NAME</th>
                                         <th style="font-size: 15px; font-weight: bold; min-width: 113px">DATE</th>
                                         <th style="font-size: 15px; font-weight: bold">STATISTICS</th>
@@ -35,8 +44,8 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr *ngFor="let data of datas">
-                                        <td style="text-align: center">{{data.id}}</td>
+                                    <tr *ngFor="let data of datas; let i = index">
+                                        <td style="text-align: center">{{ ((this.currentPage-1)*this.perPage)+ (i+1)}}</td>
                                         <td>
                                             <div>
                                                 <div><b style="font-size: 15px;">{{data.name}}</b></div>
@@ -76,12 +85,12 @@
                                             </div>
                                         </td>
                                         <td>
-                                            <!--<div style="color: #008000a3; font-family: 'Lato', sans-serif; font-size: 25px" [hidden]="data.isActive == 0" >
-                        <i class="icon icon-check-circle"></i>
-                      </div>
-                      <div style="color: #ff0000a1; font-family: 'Lato', sans-serif; font-size: 25px" [hidden]="data.isActive == 1" >
-                        <i class="icon icon-times-circle"></i>
-                      </div>-->
+                                                                <!--<div style="color: #008000a3; font-family: 'Lato', sans-serif; font-size: 25px" [hidden]="data.isActive == 0" >
+                                            <i class="icon icon-check-circle"></i>
+                                          </div>
+                                          <div style="color: #ff0000a1; font-family: 'Lato', sans-serif; font-size: 25px" [hidden]="data.isActive == 1" >
+                                            <i class="icon icon-times-circle"></i>
+                                          </div>-->
                                             <div style="font-size: 21px">
                                                 <div *ngIf="data.isActive == true" style="margin: 5px; text-align: center">
                                                     <div class="badge badge-success" style="padding: 6px 26px;">Active</div>
@@ -95,10 +104,10 @@
                                             <div class="btn-group">
                                                 <button type="button" class="btn btn-primary icon-list-alt" data-toggle="modal" data-target="#Modal-detail" style="cursor: pointer; margin-right: 2px" (click)="getID(data.id)"> Detail</button>
                                                 <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
-                        </button>
+                                                </button>
                                                 <div class="dropdown-menu">
+                                                    <button class="dropdown-item" type="button" style="cursor: pointer; font-size: 15px; background-color: #7dc855;color: white;" (click)="doExportExcel(data.id)"><i class="icon-print"></i> Export Excel</button>
                                                     <button class="dropdown-item" type="button" style="cursor: pointer; font-size: 15px;" routerLink="statistics/{{data.id}}"><i class="icon icon-line-chart"></i> Statistics</button>
-
                                                 </div>
                                             </div>
                                         </td>
@@ -109,7 +118,7 @@
                     </div>
                 </div>
             </div>
-            <bs-ngx-pagination [data]="dataPage" (pageChange)="pageChange($event)"></bs-ngx-pagination>
+            <ngx-bootstrap-pagination [(data)]="dataPage" (pageChange)="pageChange($event)" (perPageChange)="perPageChange($event)" *ngIf="this.datas.length >0"></ngx-bootstrap-pagination>
         </div>
     </div>
 </div>
