--- a/src/app/components/home/overview.component.html
+++ b/src/app/components/home/overview.component.html
@@ -1,3 +1,4 @@
+<!--
 <div class="container-fluid animatedParent animateOnce my-3">
   <div class="animated fadeInUpShort go">
     <div class="row my-3">
@@ -89,7 +90,7 @@
                 </mat-select>
               </mat-form-field>
 
-            <!--RANGE-->
+            &lt;!&ndash;RANGE&ndash;&gt;
             <mat-form-field appearance="outline">
               <mat-label>Range Date</mat-label>
               <input  matInput placeholder="Date Time Range:" name="range"
@@ -103,7 +104,7 @@
               <owl-date-time [pickerType]="'calendar'" #dtRange01></owl-date-time>
             </mat-form-field>
 
-            <!-- Search -->
+            &lt;!&ndash; Search &ndash;&gt;
             <div style="margin: 6px 11px">
               <button *ngIf="statusButton == true" class="btn btn-info" (click)="searchStatistic()" style="height: 46px; color: white"><i class="icon-filter"></i> Apply</button>
               <div *ngIf="statusButton == false" class="btn btn-info" style="height: 46px">
@@ -154,3 +155,6 @@
     </div>
   </div>
 </div>
+-->
+
+<h3>View Home</h3>
