--- a/src/app/components/login.component.html
+++ b/src/app/components/login.component.html
@@ -6,7 +6,7 @@
           <div class="text-center">
             <img src="assets/img/dummy/u4.png" alt="" />
             <h3 class="mt-2">Welcome Back</h3>
-            <p class="p-t-b-20">Pushads Dashboard (Merchant)</p>
+            <p class="p-t-b-20">Dashboard Statistic</p>
           </div>
           <form action="#" method="post" (submit)="doLogin()">
             <div class="form-group has-icon"><i class="icon-envelope-o"></i>
