--- a/src/app/components/navbar.component.html
+++ b/src/app/components/navbar.component.html
@@ -15,7 +15,7 @@
         <li class="footer p-2 text-center"><a href="#">View all</a></li>
       </ul>
     </li>
-    <li class="dropdown custom-dropdown user user-menu">
+    <!--<li class="dropdown custom-dropdown user user-menu">
       <a href="#" class="nav-link" data-toggle="dropdown">
         <img src="assets/img/dummy/user.png" class="user-image" alt="User Image" />
         <i class="icon-more_vert "></i>
@@ -36,7 +36,7 @@
           </div>
         </div>
       </div>
-    </li>
+    </li>-->
   </ul>
 </div>
 
