--- a/src/app/components/dashboard.component.html
+++ b/src/app/components/dashboard.component.html
@@ -1,13 +1,18 @@
 <cs-header></cs-header>
-<div class="page has-sidebar-left">
-  <div class="navbar navbar-expand d-flex navbar-dark justify-content-between bd-navbar blue accent-3 shadow">
+<div class="page has-sidebar-left" style="overflow: unset;">
+  <div class="navbar navbar-expand d-flex navbar-dark justify-content-between bd-navbar blue accent-3 shadow" style="background-color: #6c757d !important">
     <div class="relative">
       <div class="d-flex">
-        <div>
+        <div style="">
+          <a href="#" data-toggle="offcanvas" class="" style="color: white; font-size: 31px;">
+            <i class="icon icon-bars" style="    padding: 3px 6px;margin-right: 7px;border-radius: 5px;border: solid 2px #a2a2a2;"></i>
+          </a>
+        </div>
+        <!--<div>
           <a href="#" data-toggle="offcanvas" class="paper-nav-toggle pp-nav-toggle">
             <i></i>
           </a>
-        </div>
+        </div>-->
         <div class="d-none d-md-block">
           <h1 class="nav-title text-white">Dashboard</h1>
         </div>
