--- a/src/app/components/header.component.html
+++ b/src/app/components/header.component.html
@@ -12,16 +12,16 @@
             <i *ngIf="menu.prefix" [class]="menu.prefix"></i> <span> {{ menu.name }} </span> <i *ngIf="menu.suffix" [class]="menu.suffix"></i>
           </a>
           <ul class="treeview-menu" style="margin-left: 30px">
-            <li *ngFor="let item of menu.items">
+            <li *ngFor="let item of menu.items" >
               <a *ngIf="item.link" [routerLink]="item.link"><i [class]="item.class"></i> {{ item.name }}</a>
-              <a *ngIf="item.href" [href]="item.href"><i [class]="item.class"></i> {{ item.name }}</a>
+              <a *ngIf="item.href" [href]="item.href"><i [class]="item.class" ></i> {{ item.name }}</a>
             </li>
           </ul>
         </li>
 
         <li *ngIf="!menu.items">
-          <a *ngIf="menu.link" [routerLink]="menu.link"><i [class]="menu.class"></i> {{ menu.name }}</a>
-          <a *ngIf="menu.href" [href]="menu.href"><i [class]="menu.class"></i> {{ menu.name }}</a>
+          <a *ngIf="menu.link" [routerLink]="menu.link"><i [class]="menu.class" style="color: grey !important;"></i> {{ menu.name }}</a>
+          <a *ngIf="menu.href" [href]="menu.href"><i [class]="menu.class" style="color: grey !important;"></i> {{ menu.name }}</a>
         </li>
       </ng-container>
     </ul>
