--- a/src/app/components/user.component.html
+++ b/src/app/components/user.component.html
@@ -1,8 +1,7 @@
 <div class="relative">
   <div style="font-size: 25px;margin: 5px; display: inline-flex">
     <h2>
-      <div>PUSHADS</div>
-      <div style="font-size: 15px">merchant</div>
+      <div>STATISTIC</div>
     </h2>
     <div>
       <a href="#" data-toggle="offcanvas" class="paper-nav pp-nav-times icon icon-times icon-lg" style=" color: #bbc2c8; margin-left: 122px">
@@ -18,11 +17,11 @@
       <div class="float-left info">
         <h6 class="font-weight-light mt-2 mb-1">{{datas.firstname}}</h6>
         <a href="#"><i class="icon-circle text-success blink"></i> Online</a>
-        <a data-toggle="collapse" href="#userSettingsCollapse" role="button" aria-expanded="false"
+        <!--<a data-toggle="collapse" href="#userSettingsCollapse" role="button" aria-expanded="false"
            aria-controls="userSettingsCollapse"
            class="btn-fab btn-fab-sm fab-right fab-top btn-primary shadow1" style="top: 100px;">
           <i class="icon icon-cogs"></i>
-        </a>
+        </a>-->
       </div>
     </div>
     <div class="clearfix"></div>
@@ -31,7 +30,6 @@
         <a routerLink="/dashboard/profile" class="list-group-item list-group-item-action">
           <i class="mr-2 icon-user-circle text-blue"></i>Profile
         </a>
-        <!--<a href="#" class="list-group-item list-group-item-action"><i class="mr-2 icon-cogs text-yellow"></i>Settings</a>-->
         <a routerLink="/dashboard/change-password" class="list-group-item list-group-item-action"><i class="mr-2 icon-lock text-blue"></i>Change Password</a>
       </div>
     </div>
